Fix issue with layout dropdown overlapping in Chrome + Drupal
This issue does not occur outside of Drupal when using Chrome

--- a/src/style/LayoutConfigTile.css
+++ b/src/style/LayoutConfigTile.css
@@ -1,4 +1,4 @@
 .LayoutConfigTile{
-  width: fit-content;
+  width: max-content;
   padding: 10px;
 }
